force-app/main/default/objects/Agent_UI_Event__e/Agent_UI_Event__e.object-meta.xml
<CustomObject>
    <description>UI progress channel: notifies subscribed components (chat, run monitor) about run/step lifecycle. Separate from Agent_Step_Event__e, which is the engine's control channel.</description>
    <label>Agent UI Event</label>
    <pluralLabel>Agent UI Events</pluralLabel>
</CustomObject>