force-app/main/default/objects/Agent_UI_Event__e/fields/Payload_Json__c.field-meta.xml
<CustomField>
    <fullName>Payload_Json__c</fullName>
    <label>Payload Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>