force-app/main/default/objects/Agent_UI_Event__e/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>